; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_route.c_rte_unlock_debug.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_route.c_rte_unlock_debug.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtentry_dbg = type { i32*, i32 }
%struct.rtentry = type { i32 }

@CTRACE_HIST_SIZE = common dso_local global i64 0, align 8
@rte_debug = common dso_local global i32 0, align 4
@RTD_TRACE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rtentry_dbg*)* @rte_unlock_debug to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rte_unlock_debug(%struct.rtentry_dbg* %0) #0 {
  %2 = alloca %struct.rtentry_dbg*, align 8
  %3 = alloca i64, align 8
  store %struct.rtentry_dbg* %0, %struct.rtentry_dbg** %2, align 8
  %4 = load %struct.rtentry_dbg*, %struct.rtentry_dbg** %2, align 8
  %5 = bitcast %struct.rtentry_dbg* %4 to %struct.rtentry*
  %6 = call i32 @RT_LOCK_ASSERT_HELD(%struct.rtentry* %5)
  %7 = load %struct.rtentry_dbg*, %struct.rtentry_dbg** %2, align 8
  %8 = getelementptr inbounds %struct.rtentry_dbg, %struct.rtentry_dbg* %7, i32 0, i32 1
  %9 = call i64 @atomic_add_32_ov(i32* %8, i32 1)
  %10 = load i64, i64* @CTRACE_HIST_SIZE, align 8
  %11 = urem i64 %9, %10
  store i64 %11, i64* %3, align 8
  %12 = load i32, i32* @rte_debug, align 4
  %13 = load i32, i32* @RTD_TRACE, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %23

16:                                               ; preds = %1
  %17 = load %struct.rtentry_dbg*, %struct.rtentry_dbg** %2, align 8
  %18 = getelementptr inbounds %struct.rtentry_dbg, %struct.rtentry_dbg* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = load i64, i64* %3, align 8
  %21 = getelementptr inbounds i32, i32* %19, i64 %20
  %22 = call i32 @ctrace_record(i32* %21)
  br label %23

23:                                               ; preds = %16, %1
  ret void
}

declare dso_local i32 @RT_LOCK_ASSERT_HELD(%struct.rtentry*) #1

declare dso_local i64 @atomic_add_32_ov(i32*, i32) #1

declare dso_local i32 @ctrace_record(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
